apps/kafka-nbp/base/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kafka-nbp
spec:
  to:
    kind: Service
    name: kafka-nbp
  port:
    targetPort: http
  tls:
    termination: edge
